--- a/styles.scss
+++ b/styles.scss
@@ -31,12 +31,6 @@ border-bottom-right-radius: 100px;
     margin-top: 50px;
     margin-bottom: 50px;
 }
-  
-
-
-
-
-
 
 
 .nav-link { 
@@ -164,11 +158,14 @@ $breakpoints: (
      .log {
         margin-left: 60px;
         justify-content: center;
-       
-        
      }
     
         }
+    
+    //Margins between the sections
+   
+
+
    
 
 @media (max-width: 991.98px) { 
